# MLOps-Insurance-Project

./: LICENSE  README.md  crashcourse.txt  demo.py  project_flow.txt  pyproject.toml  requirements.txt  setup.py  template.py
notebook/: exp-notebook.ipynb  mongoDB_demo.ipynb  rf_model.pkl
src/constants/: __init__.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipeline/: training_pipeline.py
